tests/neg/nowarn.check
-- [E002] Syntax Warning: tests/neg/nowarn.scala:11:10 -----------------------------------------------------------------
11 |def t1a = try 1 // warning (parser)
   |          ^^^^^
   |          A try without catch or finally is equivalent to putting
   |          its body in a block; no exceptions are handled.
   |
   | longer explanation available when compiling with `-explain`
-- [E002] Syntax Warning: tests/neg/nowarn.scala:22:25 -----------------------------------------------------------------
22 |@nowarn(o.inl) def t2d = try 1   // two warnings (`inl` is not a compile-time constant)
   |                         ^^^^^
   |                         A try without catch or finally is equivalent to putting
   |                         its body in a block; no exceptions are handled.
   |
   | longer explanation available when compiling with `-explain`
-- [E002] Syntax Warning: tests/neg/nowarn.scala:30:26 -----------------------------------------------------------------
30 |@nowarn("id=1") def t4d = try 1 // error and warning (unused nowarn, wrong id)
   |                          ^^^^^
   |                          A try without catch or finally is equivalent to putting
   |                          its body in a block; no exceptions are handled.
   |
   | longer explanation available when compiling with `-explain`
-- [E002] Syntax Warning: tests/neg/nowarn.scala:32:28 -----------------------------------------------------------------
32 |@nowarn("verbose") def t5 = try 1 // warning with details
   |                            ^^^^^
   |                            A try without catch or finally is equivalent to putting
   |                            its body in a block; no exceptions are handled.
Matching filters for @nowarn or -Wconf:
  - id=E2
  - name=EmptyCatchAndFinallyBlock
   |
   | longer explanation available when compiling with `-explain`
-- [E129] Potential Issue Warning: tests/neg/nowarn.scala:15:11 --------------------------------------------------------
15 |def t2 = { 1; 2 } // warning (the invalid nowarn doesn't silence anything)
   |           ^
   |           A pure expression does nothing in statement position
   |
   | longer explanation available when compiling with `-explain`
-- Warning: tests/neg/nowarn.scala:14:8 --------------------------------------------------------------------------------
14 |@nowarn("wat?") // warning (typer, invalid filter)
   |        ^^^^^^
   |        Invalid message filter
   |        unknown filter: wat?
-- Warning: tests/neg/nowarn.scala:22:10 -------------------------------------------------------------------------------
22 |@nowarn(o.inl) def t2d = try 1   // two warnings (`inl` is not a compile-time constant)
   |        ^^^^^
   |        filter needs to be a compile-time constant string
-- Deprecation Warning: tests/neg/nowarn.scala:36:10 -------------------------------------------------------------------
36 |def t6a = f // warning (refchecks, deprecation)
   |          ^
   |          method f is deprecated
-- Deprecation Warning: tests/neg/nowarn.scala:39:30 -------------------------------------------------------------------
39 |@nowarn("msg=fish") def t6d = f // error (unused nowarn), warning (deprecation)
   |                              ^
   |                              method f is deprecated
-- Deprecation Warning: tests/neg/nowarn.scala:46:10 -------------------------------------------------------------------
46 |def t7c = f             // warning (deprecation)
   |          ^
   |          method f is deprecated
-- [E092] Pattern Match Unchecked Warning: tests/neg/nowarn.scala:52:7 -------------------------------------------------
52 |  case _: List[Int] => 0 // warning (patmat, unchecked)
   |       ^
   |the type test for List[Int] cannot be checked at runtime because its type arguments can't be determined from Any
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg/nowarn.scala:30:1 ----------------------------------------------------------------------------------
30 |@nowarn("id=1") def t4d = try 1 // error and warning (unused nowarn, wrong id)
   |^^^^^^^^^^^^^^^
   |@nowarn annotation does not suppress any warnings
-- Error: tests/neg/nowarn.scala:39:1 ----------------------------------------------------------------------------------
39 |@nowarn("msg=fish") def t6d = f // error (unused nowarn), warning (deprecation)
   |^^^^^^^^^^^^^^^^^^^
   |@nowarn annotation does not suppress any warnings
-- Error: tests/neg/nowarn.scala:47:5 ----------------------------------------------------------------------------------
47 |  : @nowarn("msg=fish") // error (unused nowarn)
   |    ^^^^^^^^^^^^^^^^^^^
   |    @nowarn annotation does not suppress any warnings
-- Error: tests/neg/nowarn.scala:59:0 ----------------------------------------------------------------------------------
59 |@nowarn def t9a = { 1: @nowarn; 2 } // error (outer @nowarn is unused)
   |^^^^^^^
   |@nowarn annotation does not suppress any warnings
-- Error: tests/neg/nowarn.scala:60:27 ---------------------------------------------------------------------------------
60 |@nowarn def t9b = { 1: Int @nowarn; 2 } // error (inner @nowarn is unused, it covers the type, not the expression)
   |                           ^^^^^^^
   |                           @nowarn annotation does not suppress any warnings
-- Error: tests/neg/nowarn.scala:65:0 ----------------------------------------------------------------------------------
65 |@nowarn @ann(f) def t10b = 0  // error (unused nowarn)
   |^^^^^^^
   |@nowarn annotation does not suppress any warnings
-- Error: tests/neg/nowarn.scala:66:8 ----------------------------------------------------------------------------------
66 |@ann(f: @nowarn) def t10c = 0 // error (unused nowarn), should be silent
   |        ^^^^^^^
   |        @nowarn annotation does not suppress any warnings
-- Error: tests/neg/nowarn.scala:69:0 ----------------------------------------------------------------------------------
69 |@nowarn class I1a { // error (unused nowarn)
   |^^^^^^^
   |@nowarn annotation does not suppress any warnings
-- Error: tests/neg/nowarn.scala:74:0 ----------------------------------------------------------------------------------
74 |@nowarn class I1b { // error (unused nowarn)
   |^^^^^^^
   |@nowarn annotation does not suppress any warnings
